--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,71 @@
-//Reset CSS
+/* Reset CSS */
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   /*padding and border 
     are included in the width and height*/
-    
+}
+
+html {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* 
+Rules:
+1. Từ ngoài vào trong
+2. Từ trên xuống dưới
+3. Tổng quan đến chi tiết
+
+
+*/
+
+/* 
+1. Xác định vị trí
+2. Kích thước (width, height)
+3. Màu sắc
+4. Kiểu dáng/ kiểu chữ
+*/
+
+/*wrapper có tính chất block  */
+#wrapper {
+}
+
+#header {
+  height: 46px;
+  background-color: black;
+}
+
+#nav {
+}
+
+#nav li {
+  display: inline-block;
+}
+
+/* Đi theo cấp css từ cha đến con*/
+#nav li a {
+color: whitesmoke;
+text-decoration: none;
+line-height: 46px;
+padding: 0 24px;
+display:inline-block;
+}
+
+#nav li:hover a {
+    background-color: rgb(255, 255, 255);
+    color:black;
+}
+
+/*Select css từ cấp cha trước*/
+
+#nav .subnav {
+  display: none;
+}
+
+#slider {
+}
+#content {
+}
+#footer {
 }
